tests/NormalTests/paczka1/small_fuzzy/63401215.err
Error in line 3: naXzmmEE6E S865 69,6
Error in line 1: ezOU9QYXtC A199 72,3
